<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mynanodegree"
        android:textSize="@dimen/text_large"
        android:layout_margin="8dp"
        android:textColor="@color/dark_back"
        />
   <Button
       android:layout_width="@dimen/button_width"
       android:layout_height="wrap_content"
       android:text="@string/popular_movies"
       android:textColor="@color/white"
       android:background="@color/dark_back"
       android:layout_margin="8dp"
       android:onClick="popularMovies"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:textColor="@color/white"
        android:background="@color/dark_back"
        android:layout_margin="8dp"
        android:onClick="stockHawk"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textColor="@color/white"
        android:background="@color/dark_back"
        android:layout_margin="8dp"
        android:onClick="buildItBigger"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:textColor="@color/white"
        android:background="@color/dark_back"
        android:layout_margin="4dp"
        android:onClick="makeYourAppMaterial"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:textColor="@color/white"
        android:background="@color/dark_back"
        android:layout_margin="4dp"
        android:onClick="goUbiquitous"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:textColor="@color/white"
        android:background="@color/dark_back"
        android:layout_margin="4dp"
        android:onClick="capstone"
        />

</LinearLayout>
